# ecommerce_back

./: .flake8  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  main_py.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_category_py.html  z_145eef247bfb46b6_mixin_py.html  z_145eef247bfb46b6_product_py.html
src/: category.py  mixin.py  product.py
tests/: conftest.py  test_category.py  test_main.py  test_mixin.py  test_product.py
